--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>HTML5 Test</title>
+    <title>Alert Logic UI Test</title>
   </head>
   <body>
     <h1>Hello world</h1>
