--- a/index.html
+++ b/index.html
@@ -3,24 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Alert Logic UI Test</title>
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="main.js"></script>
   </head>
   <body ng-app="ngAlertLogicApp" ng-controller="mainController">
+	  <div id="logo" />
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 text-center">
-          <form>  
+          <form>
             <div class="form-group">
-                <input type="text" class="form-control input-lg text-center" placeholder="Search for an actor's name...">
+              <input type="text" class="form-control input-lg text-center" placeholder="Search for an actor's name...">
             </div>
             <button class="btn btn-primary btn-lg" ng-click="searchPerson(somei.id)">
-                Search
+              Search
             </button>
           </form>
         </div>
       </div>
     </div>
   </body>
+  <script>
+	  $('.row').css("margin-top", "250px");
+	  $('#logo').css("background", "url(TMDbLogo.png) center center no-repeat"); 	
+  </script>
 </html>
