--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <title>Alert Logic UI Test</title>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-	  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="main.js"></script>
   </head>
   <body ng-app="ngAlertLogicApp" ng-controller="mainController">
-	  <div id="logo" />
+    <div id="logo" />
     <div class="container">
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2 text-center">
@@ -26,7 +26,7 @@
     </div>
   </body>
   <script>
-	  $('.row').css("margin-top", "250px");
-	  $('#logo').css("background", "url(TMDbLogo.png) center center no-repeat"); 	
+    $('.row').css("margin-top", "250px");
+    $('#logo').css("background", "url(tmdb-logo.png) center center no-repeat"); 	
   </script>
 </html>
