--- a/index.html
+++ b/index.html
@@ -1,32 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="ngAlertLogicApp">
   <head>
+    <title>Alert Logic - UI Developer Test: Diego Fernando Trujillo</title>
     <meta charset="utf-8">
-    <title>Alert Logic UI Test</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="alert-logic-icon.ico">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
     <script src="main.js"></script>
   </head>
-  <body ng-app="ngAlertLogicApp" ng-controller="mainController">
-    <div id="logo" />
+  <body ng-controller="mainController">
+		<div id="logo" />
     <div class="container">
-      <div class="row">
+      <div id="fetch" class="row">
         <div class="col-sm-8 col-sm-offset-2 text-center">
-          <form>
+          <form ng-submit="searchPerson()">
             <div class="form-group">
-              <input type="text" class="form-control input-lg text-center" placeholder="Search for an actor's name...">
+              <input id="persons" type="text" class="form-control input-lg text-center" placeholder="Search for an actor's name..." onkeyup="getPersons()" ng-model="person">
             </div>
-            <button class="btn btn-primary btn-lg" ng-click="searchPerson(somei.id)">
-              Search
+            <button class="btn btn-primary btn-lg" id="searchPerson">
+              GO!
             </button>
           </form>
+		  
         </div>
       </div>
     </div>
+		<div id="results" class="container">
+			<div id="heading" class="input-lg">
+				<div class="col-md-4"><b>Release Date</b></div>
+				<div class="col-md-8"><b>Original Title</b></div>
+			</div>
+			<div ng-repeat="person in persons">
+				<div class="form-control input-lg">
+					<div class="col-md-4">{{person.release_date}}</div>
+					<div class="col-md-8"><a href="#">{{person.original_title}}</a></div>
+				</div>
+			</div>
+		</div>	
   </body>
   <script>
-    $('.row').css("margin-top", "250px");
-    $('#logo').css("background", "url(tmdb-logo.png) center center no-repeat"); 	
+		$('#heading').hide();
+		$('#fetch').css("margin-top", "150px");
+		$('#results').css("margin-top", "50px");
+		$('#results').css("width", "60%");
+		$('#logo').css("background", "url(tmdb-logo.png) top center no-repeat");
+		$('#searchPerson').on("click", function(){
+			$('#heading').show();
+		});
   </script>
 </html>
