Make folder structure.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Alert Logic - UI Developer Test: Diego Fernando Trujillo</title>
     <meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="alert-logic-icon.ico">
+		<link rel="icon" href="images/alert-logic-icon.ico">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
 		<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div class="loading" align="center">
-			<img src="ajax-loader.gif" alt="loading" />
+			<img src="images/ajax-loader.gif" alt="loading" />
 		</div>
   </body>
   <script>
@@ -51,7 +51,7 @@
 		$('#fetch').css("margin-top", "150px");
 		$('#results').css("margin-top", "50px");
 		$('#results').css("width", "65%");
-		$('#logo').css("background", "url(tmdb-logo.png) top center no-repeat");
+		$('#logo').css("background", "url(images/tmdb-logo.png) top center no-repeat");
 		$('#searchPerson').on("click", function(){
 			if($('#persons').attr("data-id")){
 				$('#heading').show();
