--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script src="main.js"></script>
+    <script src="controllers/main.js"></script>
   </head>
   <body ng-controller="mainController">
 		<div id="logo" />
