--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 		$('#searchPerson').on("click", function(){
 			if($('#persons').attr("data-id")){
 				$('#heading').show();
-				$(".loading").show();
+				var loading = $('.loading');
+				loading.show();
 				var top = Math.max($(window).height() / 2 - loading[0].offsetHeight / 2, 0);
 				var left = Math.max($(window).width() / 2 - loading[0].offsetWidth / 2, 0);
 				loading.css({ top: top, left: left });
